Kubernetes/service_opa.yml
apiVersion: v1
kind: Service
metadata:
  name: tradindgopa-service
  namespace : projet-opa-de-202209
spec:
  type: NodePort
  selector:
    app: dash-opa
  ports:
    - name: mongo-port
      protocol: TCP
      port: 27017

    - name: binance-port
      protocol: TCP
      port: 8050
